--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">TestApplication</string>
+    <string name="enter_new_task">Enter new task</string>
+    <string name="create_a_new_list">Create a new list</string>
+    <string name="enter_name_of_new_list">Enter name of new list</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="log_in">Log In</string>
+    <string name="log_in_here">Already have an account? Log in here!</string>
+    <string name="register_here">Don\'t have an account? Register here!</string>
+    <string name="register">Register</string>
+
+    <string name="menu_manage_lists">Manage Lists</string>
+    <string name="menu_log_out">Log Out</string>
 </resources>
