--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,11 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="log_in">Log In</string>
+    <string name="logging_in">Logging In…</string>
     <string name="log_in_here">Already have an account? Log in here!</string>
     <string name="register_here">Don\'t have an account? Register here!</string>
     <string name="register">Register</string>
+    <string name="registering">Registering…</string>
     <string name="change_list_name">Change list name</string>
 
     <string name="default_list_name">My List</string>
