--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="register">Register</string>
     <string name="registering">Registering…</string>
     <string name="change_list_name">Change list name</string>
+    <string name="add_subtask">Add subtask</string>
+    <string name="add_information">Add information</string>
+    <string name="new_list_name">New list name</string>
 
     <string name="default_list_name">My List</string>
 
