Adds custom splash screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,6 @@
 
     <string name="error_no_text_entered">You did not enter any text</string>
     <string name="error_list_already_exists">This list already exists</string>
+
+    <string name="splash_screen">Splash screen</string>
 </resources>
