Adds logo icon to login and register activities.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="error_list_already_exists">This list already exists</string>
 
     <string name="splash_screen">Splash screen</string>
+    <string name="logo">Logo</string>
 </resources>
