--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,15 +26,20 @@
     <string name="menu_rename_list">Rename List</string>
     <string name="menu_delete_list">Delete List</string>
     <string name="menu_log_out">Log Out</string>
+    <string name="menu_delete_account">Delete Account</string>
 
     <string name="toast_no_list_chosen">No list chosen</string>
     <string name="toast_cannot_delete_default_list">You cannot delete default list</string>
     <string name="toast_user_registered_successfully">User registered successfully</string>
     <string name="toast_email_sent_successfully">Success! Check your email to change your password</string>
     <string name="toast_something_went_wrong">Something went wrong, please try again</string>
+    <string name="toast_user_account_deleted">User account deleted</string>
+    <string name="toast_password_is_invalid">The password is invalid</string>
 
     <string name="dialog_delete_title">Delete this list?</string>
     <string name="dialog_delete_message">All tasks in this list will be deleted</string>
+    <string name="dialog_delete_account_title">Delete this account?</string>
+    <string name="dialog_delete_account_message">Once deleted, this account and all data will be gone forever. Delete?</string>
     <string name="dialog_delete_positive_button">Delete</string>
     <string name="dialog_delete_negative_button">Cancel</string>
 
@@ -45,6 +50,9 @@
 
     <string name="error_no_text_entered">You did not enter any text</string>
     <string name="error_list_already_exists">This list already exists</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="splash_screen">Splash screen</string>
     <string name="logo">Logo</string>
